--- a/css-src/partials/settings/_susy.scss
+++ b/css-src/partials/settings/_susy.scss
@@ -16,5 +16,5 @@ $break: 12;
 
 //alternative layout breakpoints
 $mobile-landscape: 6;
-$tablet: 8;
+$tablet: 12;
 $computer: 55em 12;
